--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        build: [stable, nightly]
+        build: [stable, beta, nightly]
         include:
           - build: nightly
             benches: true
@@ -42,16 +42,93 @@ jobs:
       - name: Test all benches
         if: matrix.benches
         run: cargo test --benches --all-features
-  deploy:
-    name: deploy
+
+  deploy-linux:
+    name: deploy-${{ matrix.target }}
     permissions:
       contents: write
     needs: [test]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 2
       matrix:
         target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabihf, i686-unknown-linux-gnu, i686-unknown-linux-musl, mips-unknown-linux-gnu, mips64-unknown-linux-gnuabi64, mips64el-unknown-linux-gnuabi64, mipsel-unknown-linux-gnu, powerpc-unknown-linux-gnu, powerpc64-unknown-linux-gnu, powerpc64le-unknown-linux-gnu, arm-unknown-linux-gnueabi ,x86_64-unknown-linux-gnu ,x86_64-unknown-linux-musl]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
+      - name: Install Cross
+        run: cargo install cross
+
+      - name: Build target
+        run: cross build --release --locked --target ${{ matrix.target }}
+
+      - name: Package
+        shell: bash
+        run: |
+          #strip target/${{ matrix.target }}/release/bocchi
+          cd target/${{ matrix.target }}/release
+          tar czvf ../../../bocchi-${{ matrix.target }}.tar.gz bocchi
+          cd -
+
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        with:
+          files: 'bocchi*'
+
+  deploy-macos:
+    name: deploy-${{ matrix.target }}
+    permissions:
+      contents: write
+    needs: [test]
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        target: [x86_64-apple-darwin, aarch64-apple-darwin]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
+      - run: rustup target add aarch64-apple-darwin
+        if: matrix.target == 'aarch64-apple-darwin'
+
+      - name: Build target
+        run: cargo build --release --target ${{ matrix.target }}
+
+      - name: Package
+        shell: bash
+        run: |
+          #strip target/${{ matrix.target }}/release/bocchi
+          cd target/${{ matrix.target }}/release
+          tar czvf ../../../bocchi-${{ matrix.target }}.tar.gz bocchi
+          cd -
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        with:
+          files: 'bocchi*'
+
+  deploy-windows:
+    name: deploy-${{ matrix.target }}
+    permissions:
+      contents: write
+    needs: [test]
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x86_64-pc-windows-msvc]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
